# rebirth-launcher

./: .env  .gitattributes  .gitignore  .gitlab-ci.yml  pyproject.toml  setup.py
.github/workflows/: build.yml  release.yml
src/: config.py
src/rebirth_launcher/: __init__.py  archive.py  config.py  constants.py  exceptions.py  launcher.py  main.py  mod_manager.py  steam_integration.py  type_definitions.py  types.py  update_checker.py  utils.py
