[project]
name = "rebirthlauncher"
version = "0.1.0"
description = "Launcher for 7 Days to Die Rebirth mod pack"
authors = [
    {name = "Bertrand Reyna-Brainerd", email = "bertbrainerd@gmail.com"}
]
dependencies = [
    "requests>=2.31.0",
    "PyGithub>=2.1.1",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "pydantic>=2.5.2",
    "packaging>=23.2",
    "watchdog>=3.0.0"
]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling", "editables"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rebirthlauncher"]

[project.scripts]
rebirth-launcher = "rebirthlauncher.main:main"
launch = "rebirthlauncher.main:main"

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.1.9",
    "pytest>=7.4.3",
    "pyinstaller>=6.3.0"
]

[tool.uv]
virtualenv = ".venv"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict = true

[tool.ruff]
select = ["E", "F", "I", "N", "W", "B", "UP"]
line-length = 88
target-version = "py39"