[project]
name = "rebirth-launcher"
version = "0.1.0"
description = "Mod launcher for 7 Days to Die Rebirth"
requires-python = ">=3.9"
dependencies = [
    "typer",
    "rich",
    "requests",
    "pathlib",
    "click",
]

[project.scripts]
rebirth-launcher = "rebirth_launcher.main:main"
launch = "rebirth_launcher.main:main"

[project.urls]
Source = "https://github.com/brbrainerd/rebirth-launcher"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict = true

[[tool.mypy.overrides]]
module = [
    "rich.*",
    "typer.*",
    "requests.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py39"
line-length = 88
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "W",  # pycodestyle warnings
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.isort]
known-first-party = ["src"]

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "C0330",  # bad-continuation
    "C0326",  # bad-whitespace
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "f"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "pylint",
    "black",
    "pytest",
    "pytest-cov",
    "types-requests",
    "types-setuptools",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.hatch.build.targets.wheel]
packages = ["src/rebirth_launcher"]
